# test2

./: Makefile  README.md  build.py  config.yaml  main.py  pyproject.toml
src/secure_box/: cli.py  config.yaml
src/secure_box/utils/: backup.py  logger.py
tests/: conftest.py  test_backup.py  test_config.py  test_lock.py  test_logger.py  test_tools.py  test_unlock.py
utils/: backup.py  config.py  lock.py  logger.py  mail_manager.py  observer.py  tools.py  unlock.py
