[project]
name = "secure-box"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "cryptography>=46.0.3",
    "loguru>=0.7.3",
    "nuitka>=2.8.9",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "watchdog>=6.0.0",
]

