[project]
name = "secure_box"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "cryptography>=46.0.3",
    "loguru>=0.7.3",
    "nuitka>=2.8.9",
    "psutil>=7.1.3",
    "pytest>=9.0.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]


[project.scripts]
secure-box = "secure_box.cli:cli"

[tool.hatch.build]
sources = ["src"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
